// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`When bucket has no readings > should render 1`] = `
<div>
  <svg
    font-family="sans-serif"
    font-size="10"
    height="156"
    stroke="currentColor"
    text-anchor="middle"
    width="348"
  >
    <g
      transform="translate(36,12)"
    >
      <g
        class="x axis"
        transform="translate(0, 120)"
      >
        <path
          d="M0,6V0H300V6"
          fill="none"
        />
      </g>
      <g
        class="y axis"
        text-anchor="end"
      >
        <path
          d="M-6,120H0V0H-6"
          fill="none"
        />
        <g
          class="tick"
          transform="translate(0, 120)"
        >
          <line
            x2="-6"
          />
          <text
            dy="0.32em"
            stroke="none"
            x="-9"
          >
            5.0
          </text>
        </g>
        <g
          class="tick"
          transform="translate(0, 100)"
        >
          <line
            x2="-6"
          />
          <text
            dy="0.32em"
            stroke="none"
            x="-9"
          >
            5.5
          </text>
        </g>
        <g
          class="tick"
          transform="translate(0, 80)"
        >
          <line
            x2="-6"
          />
          <text
            dy="0.32em"
            stroke="none"
            x="-9"
          >
            6.0
          </text>
        </g>
        <g
          class="tick"
          transform="translate(0, 60)"
        >
          <line
            x2="-6"
          />
          <text
            dy="0.32em"
            stroke="none"
            x="-9"
          >
            6.5
          </text>
        </g>
        <g
          class="tick"
          transform="translate(0, 40)"
        >
          <line
            x2="-6"
          />
          <text
            dy="0.32em"
            stroke="none"
            x="-9"
          >
            7.0
          </text>
        </g>
        <g
          class="tick"
          transform="translate(0, 20)"
        >
          <line
            x2="-6"
          />
          <text
            dy="0.32em"
            stroke="none"
            x="-9"
          >
            7.5
          </text>
        </g>
        <g
          class="tick"
          transform="translate(0, 0)"
        >
          <line
            x2="-6"
          />
          <text
            dy="0.32em"
            stroke="none"
            x="-9"
          >
            8.0
          </text>
        </g>
      </g>
      <g
        class="bands"
        opacity="0.3"
        stroke="none"
      >
        <path
          d="M0 96V76H300V96Z"
          fill="#EE0"
        />
        <path
          d="M0 20V40H300V20Z"
          fill="#EE0"
        />
        <path
          d="M0 76V40H300V76Z"
          fill="#0E0"
        />
      </g>
      <g
        class="data"
        fill="forestgreen"
        stroke="forestgreen"
      >
        <path
          fill="none"
          stroke-width="2"
        />
      </g>
      <g
        class="no-data"
      >
        <text
          stroke="none"
          x="150"
          y="60"
        >
          No Data To Display
        </text>
      </g>
    </g>
  </svg>
</div>
`;

exports[`When bucket has readings > should render 1`] = `
<div>
  <svg
    font-family="sans-serif"
    font-size="10"
    height="156"
    stroke="currentColor"
    text-anchor="middle"
    width="348"
  >
    <g
      transform="translate(36,12)"
    >
      <g
        class="x axis"
        transform="translate(0, 120)"
      >
        <path
          d="M0,6V0H300V6"
          fill="none"
        />
        <g
          class="tick"
          transform="translate(150, 0)"
        >
          <line
            y2="6"
          />
          <text
            dy="0.7em"
            stroke="none"
            y="9"
          >
            Jun 02
          </text>
        </g>
      </g>
      <g
        class="y axis"
        text-anchor="end"
      >
        <path
          d="M-6,120H0V0H-6"
          fill="none"
        />
        <g
          class="tick"
          transform="translate(0, 120)"
        >
          <line
            x2="-6"
          />
          <text
            dy="0.32em"
            stroke="none"
            x="-9"
          >
            5.0
          </text>
        </g>
        <g
          class="tick"
          transform="translate(0, 100)"
        >
          <line
            x2="-6"
          />
          <text
            dy="0.32em"
            stroke="none"
            x="-9"
          >
            5.5
          </text>
        </g>
        <g
          class="tick"
          transform="translate(0, 80)"
        >
          <line
            x2="-6"
          />
          <text
            dy="0.32em"
            stroke="none"
            x="-9"
          >
            6.0
          </text>
        </g>
        <g
          class="tick"
          transform="translate(0, 60)"
        >
          <line
            x2="-6"
          />
          <text
            dy="0.32em"
            stroke="none"
            x="-9"
          >
            6.5
          </text>
        </g>
        <g
          class="tick"
          transform="translate(0, 40)"
        >
          <line
            x2="-6"
          />
          <text
            dy="0.32em"
            stroke="none"
            x="-9"
          >
            7.0
          </text>
        </g>
        <g
          class="tick"
          transform="translate(0, 20)"
        >
          <line
            x2="-6"
          />
          <text
            dy="0.32em"
            stroke="none"
            x="-9"
          >
            7.5
          </text>
        </g>
        <g
          class="tick"
          transform="translate(0, 0)"
        >
          <line
            x2="-6"
          />
          <text
            dy="0.32em"
            stroke="none"
            x="-9"
          >
            8.0
          </text>
        </g>
      </g>
      <g
        class="bands"
        opacity="0.3"
        stroke="none"
      >
        <path
          d="M0 96V76H300V96Z"
          fill="#EE0"
        />
        <path
          d="M0 20V40H300V20Z"
          fill="#EE0"
        />
        <path
          d="M0 76V40H300V76Z"
          fill="#0E0"
        />
      </g>
      <g
        class="data"
        fill="forestgreen"
        stroke="forestgreen"
      >
        <path
          d="M150,68Z"
          fill="none"
          stroke-width="2"
        />
        <circle
          cx="150"
          cy="68"
          r="4"
        />
      </g>
    </g>
  </svg>
</div>
`;
